cloud-backend/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloud-backend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-back
      protocol: HTTP
    hosts:
    - "cloud-backend.192.168.64.2.nip.io"
