cloud-backend/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-cloud-backend-a
spec:
  hosts:
  - "cloud-backend.192.168.64.2.nip.io"
  gateways:
  - cloud-backend-gateway
  http:
  - match:
    - uri:
        exact: /invoke
    route:
    - destination:
        host: service-cloud-backend-a
        port:
          number: 80
